@@ -2,8 +2,11 @@ package org.mifos.framework.components.batchjobs.helpers;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
+import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -11,6 +14,7 @@ import org.apache.log4j.Logger;
 import org.mifos.application.servicefacade.ApplicationContextHolder;
 import org.mifos.framework.components.batchjobs.TaskHelper;
 import org.mifos.framework.components.batchjobs.exceptions.BatchJobException;
+import org.mifos.framework.util.ConfigurationLocator;
 import org.springframework.context.ApplicationContext;
 import org.springframework.jdbc.datasource.DriverManagerDataSource;
 
@@ -22,6 +26,7 @@ public class ETLReportDWHelper extends TaskHelper {
     @Override
     public void execute(final long timeInMillis) throws BatchJobException {
         new ApplicationContextHolder();
+        ArrayList<String> errors = new ArrayList<String>();
         ApplicationContext ach = ApplicationContextHolder.getApplicationContext();
         DriverManagerDataSource ds = (DriverManagerDataSource) ach.getBean("dataSource");
         DriverManagerDataSource dsDW = (DriverManagerDataSource) ach.getBean("dataSourcePentahoDW");
@@ -32,37 +37,69 @@ public class ETLReportDWHelper extends TaskHelper {
             nameOfDataBase = m.group(6);
         }
         if (!nameOfDataBase.equals("")) {
+        	try {
+        		dsDW.getConnection();
+        	} catch (SQLException ex) {
+        		errors.add("Data Warehouse is not configured");
+        		throw new BatchJobException("Data warehouse database", errors);
+        	}
+        	ConfigurationLocator configurationLocator = new ConfigurationLocator();
+        	String configPath = configurationLocator.getConfigurationDirectory();
             createPropertiesFileForPentahoDWReports(ds, dsDW);
-            String path = System.getProperty("user.home") + "/.mifos/ETL/MifosDataWarehouseETL/" + FILENAME;
-            String jarPath = System.getProperty("user.home") + "/.mifos/ETL/mifos-etl-plugin-1.0-SNAPSHOT.one-jar.jar";
+            String path = configPath + "/ETL/MifosDataWarehouseETL/" + FILENAME;
+            String jarPath = configPath + "/ETL/mifos-etl-plugin-1.0-SNAPSHOT.one-jar.jar";
             String javaHome = System.getProperty("java.home") + "/bin/java"; 
-            String cmd = "-jar " + jarPath + " " + path + " false";
-            String pathToLog = System.getProperty("user.home") + "/.mifos/ETL/log";     
+            String pathToLog = configPath + "/ETL/log"; 
+
             if (File.separatorChar == '\\') { // windows platform
                 javaHome=javaHome.replaceAll("/", "\\\\");
                 javaHome='"'+javaHome+'"';
-                cmd = cmd.replaceAll("/", "\\\\");
+                jarPath = jarPath.replaceAll("/", "\\\\");
+                path = path.replaceAll("/", "\\\\");
                 pathToLog = pathToLog.replaceAll("/", "\\\\");
             }
+            PrintWriter fw = null;
             try {
-            	
-                cmd = javaHome +" "+ cmd +" "+ dsDW.getUsername() + " " + dsDW.getPassword() + " " + dsDW.getUrl();
-                Process p = Runtime.getRuntime().exec(cmd);
+            	boolean hasErrors = false;
+            	boolean notRun = true;
+            	ProcessBuilder processBuilder = new ProcessBuilder(javaHome, "-jar", jarPath, path, "false",
+            	        dsDW.getUsername(), dsDW.getPassword(), dsDW.getUrl());
+            	processBuilder.redirectErrorStream(true);
+                Process p = processBuilder.start();
                 BufferedReader reader = new BufferedReader (new InputStreamReader(p.getInputStream()));
                 String line =null;
-                if(new File(pathToLog).exists()){
-                	new File(pathToLog).delete();
-                }
-                File file = new File(pathToLog);
-                PrintWriter fw = new PrintWriter(file);
-                while ((line = reader.readLine ()) != null) {
+				if (new File(pathToLog).exists()) {
+					new File(pathToLog).delete();
+				}
+				File file = new File(pathToLog);
+				fw = new PrintWriter(file);
+                while ((line = reader.readLine()) != null) {
                 	fw.println(line);
+                	if (line.matches("^ERROR.*")) {
+                		hasErrors = true;
+                	}
+                	notRun=false;
                 }
-                fw.close();
-            } catch (Exception e) {
-                e.printStackTrace();
+                if (notRun) {
+                	errors.add("Data Warehouse is not configured properly");
+            		throw new BatchJobException("Data warehouse database", errors);
+                }
+                if (hasErrors) {
+                	errors.add("ETL error, for more details see log file: "+pathToLog);
+                	throw new BatchJobException("ETL error", errors);
+                }
+            } catch (IOException ex) {
+            	throw new BatchJobException(ex.getCause());
+            } finally {
+                if (fw != null) {
+                    fw.close();
+                }
             }
-        }
+		} else {
+			errors.add("Data Warehouse is not configured");
+			throw new BatchJobException("Data warehouse database", errors);
+		}
+        
 
     }
 
